@@ -6,6 +6,11 @@ See the end for copying conditions.
 
 ** gss/api.h: Added RFC 5587 const typedefs.
 
+** gss/ext.h: Added 'const' keywords to gss_oid_equal, gss_encapsulate_token,
+** and gss_decapsulate_token.
+This does not affect the ABI and doesn't modify any semantics: the
+functions did not modify the non-const parameters before.
+
 ** i18n: Translations were updated.
 
 ** build: Update gnulib files.
